--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "multer": "^1.4.4",
