--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
+    "firebase": "^9.6.5",
     "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
