--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon src/server.ts"
-    
   },
   "dependencies": {
     "body-parser": "^1.19.1",
@@ -13,6 +12,7 @@
     "csv-parse": "^5.0.4",
     "express": "^4.17.2",
     "firebase": "^9.6.5",
+    "firebase-admin": "^10.0.2",
     "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
